--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@types/node": "20.4.2",
@@ -22,5 +24,9 @@
     "sass": "^1.63.6",
     "styled-components": "^6.0.4",
     "typescript": "5.1.6"
-  }
+  },
+  "devDependencies": {
+    "gh-pages": "^6.0.0"
+  },
+  "homepage": "https://saipranay2011.github.io/Portfolio-V2/"
 }
