--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "env-cmd -f env/.env.local next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "build:prod": "env-cmd -f env/.env.prod yarn build",
+    "build:local": "env-cmd -f env/.env.local yarn build",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
@@ -15,6 +17,8 @@
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "classnames": "^2.3.2",
+    "dotenv": "^16.3.1",
+    "env-cmd": "^10.1.0",
     "eslint": "8.45.0",
     "next": "^13.4.19",
     "react": "^18.2.0",
